@@ -1,3 +1,7 @@
+* Mon Mar 04 2019 Liz Nemsick <lnemsick.simp@gmail.com> - 6.1.6-0
+- Expanded the upper limit of the stdlib Puppet module version
+- Updated URLs in the README.md
+
 * Fri Feb 22 2019 Trevor Vaughan <tvaughan@onyxpoint.com> - 6.1.5-0
 - Change the sssd::provider::ldap::ldap_access_order defaults to
   ['ppolicy','pwd_expire_policy_renew'] by default to prevent accidental system
